--- a/nacos-consumer/src/main/resources/application.properties
+++ b/nacos-consumer/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.application.name=nacos-consumer
-server.port=8080
-spring.cloud.nacos.config.server-addr=localhost:8848
-spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.profiles.active=dev
