--- a/spring-boot-config-example/src/main/resources/application.properties
+++ b/spring-boot-config-example/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-boot-config-example
 server.port=18080
-nacos.config.server-addr=localhost:8848
+nacos.config.server-addr=172.16.0.49:8848
