--- a/nacos-consumer/src/main/resources/application-dev.properties
+++ b/nacos-consumer/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 spring.application.name=application-consumer
 server.port=8080
 spring.cloud.nacos.config.enabled=true
-spring.cloud.nacos.config.server-addr=172.16.0.49:8848,172.16.0.49:18848,172.16.0.49:28848
+spring.cloud.nacos.config.server-addr=localhost:8848,localhost:18848,localhost:28848
 spring.cloud.nacos.config.username=application
 spring.cloud.nacos.config.password=application
 spring.cloud.nacos.discovery.enabled=true
 spring.cloud.nacos.discovery.username=application
 spring.cloud.nacos.discovery.password=application
-spring.cloud.nacos.discovery.server-addr=172.16.0.49:8848,172.16.0.49:18848,172.16.0.49:28848
+spring.cloud.nacos.discovery.server-addr=localhost:8848,localhost:18848,localhost:28848
