--- a/spring-cloud-config-example/src/main/resources/application-test.properties
+++ b/spring-cloud-config-example/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-cloud-config-example
 spring.cloud.nacos.config.file-extension=properties
 server.port=18080
-spring.cloud.nacos.config.server-addr=172.16.0.49:8848
-spring.cloud.nacos.discovery.server-addr=172.16.0.49:8848
+spring.cloud.nacos.config.server-addr=localhost:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
 
