--- a/service-provider/src/main/resources/application-dev.properties
+++ b/service-provider/src/main/resources/application-dev.properties
@@ -3,10 +3,10 @@ spring.cloud.nacos.config.file-extension=properties
 server.port=18080
 spring.cloud.nacos.config.enabled=true
 spring.cloud.nacos.config.server-addr=localhost:8848,localhost:18848,localhost:28848
-spring.cloud.nacos.config.username=application
-spring.cloud.nacos.config.password=application
+spring.cloud.nacos.config.username=nacos
+spring.cloud.nacos.config.password=nacos
 spring.cloud.nacos.discovery.enabled=true
-spring.cloud.nacos.discovery.username=application
-spring.cloud.nacos.discovery.password=application
+spring.cloud.nacos.discovery.username=nacos
+spring.cloud.nacos.discovery.password=nacos
 spring.cloud.nacos.discovery.server-addr=localhost:8848,localhost:18848,localhost:28848
 
